Created page with "Werkzeugleisten-Symbol  [[Image:Macro_Cut_Object_For_Magnets.png]]"

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -241,11 +241,8 @@ Macro Cut Object for Magnets
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Cut_Object_For_Magnets.FCMacro</b>
+<p>Werkzeugleisten-Symbol  <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Cut_Object_For_Magnets.png&amp;filetimestamp=20260106011212&amp;.html" class="mw-file-description"><img src="../File/Macro_Cut_Object_For_Magnets.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Cut_Object_For_Magnets.FCMacro</b>
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
 <div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
@@ -255,10 +252,9 @@ Macro Cut Object for Magnets
 </div>
 </div>
 <p><br>
+<span id="Links"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
+<h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
 <li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
@@ -268,13 +264,13 @@ Macro Cut Object for Magnets
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113194301
+Cached time: 20260113194321
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.081 seconds
-Preprocessor visited node count: 166/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 165/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -284,13 +280,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.707      1 -total
- 67.64%   18.741      1 Template:CodeDownload
- 16.96%    4.699      3 Template:FileName
- 13.68%    3.791      1 Template:Macro
+100.00%    4.520      1 -total
+ 45.48%    2.056      1 Template:Macro
+ 24.55%    1.110      3 Template:FileName
+ 22.92%    1.036      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194301 and revision id 1737926. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194321 and revision id 1737930. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
