--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -255,22 +255,20 @@ Macro Cut Object for Magnets
 <span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
-<li><a href="../Part_Slice.html" title="Part Slice">Part Slice</a> - FreeCAD's built-in slice tool.</li>
-<li><a href="../PartDesign_Hole.html" title="PartDesign Hole">PartDesign Hole</a> - Parametric hole feature documentation.</li>
-<li><a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation.</li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Vollst&auml;ndige Dokumentation</a> - Vollst&auml;ndige Anleitungen und Tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub-Repository</a> - Quellcode und Problemverfolgung (Issue Tracker).</li>
+<li><a href="../de/Part_Slice.html" title="Part Slice/de">Part Zerschneiden</a> - Das integrierte Zerschneiden-Werkzeug von FreeCAD.</li>
+<li><a href="../de/PartDesign_Hole.html" title="PartDesign Hole/de">PartDesign Bohrung</a> - Dokumentation zu parametrischen Bohrungen.</li>
+<li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194321
+Cached time: 20260113194743
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 165/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.051 seconds
+Preprocessor visited node count: 164/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -280,13 +278,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.520      1 -total
- 45.48%    2.056      1 Template:Macro
- 24.55%    1.110      3 Template:FileName
- 22.92%    1.036      1 Template:CodeDownload
+100.00%    6.767      1 -total
+ 49.05%    3.319      1 Template:Macro
+ 24.01%    1.625      1 Template:CodeDownload
+ 21.73%    1.471      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194321 and revision id 1737930. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194743 and revision id 1737932. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
