--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -230,9 +230,9 @@ Macro Cut Object for Magnets
 <li><b>Edge clearance</b>: For thin-walled objects, reduce the preferred clearance but keep minimum clearance high enough to prevent wall breakthrough.</li>
 <li><b>Re-cutting</b>: The macro detects existing magnet holes and preserves them when cutting already-cut parts.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
-</div>
+<p><span id="Source_Code"></span>
+</p>
+<h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The full source code is hosted on GitHub:
 </p>
@@ -262,12 +262,12 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194743
+Cached time: 20260113194751
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.051 seconds
+CPU time usage: 0.046 seconds
+Real time usage: 0.079 seconds
 Preprocessor visited node count: 164/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -278,13 +278,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.767      1 -total
- 49.05%    3.319      1 Template:Macro
- 24.01%    1.625      1 Template:CodeDownload
- 21.73%    1.471      3 Template:FileName
+100.00%    8.054      1 -total
+ 52.50%    4.228      1 Template:Macro
+ 23.39%    1.884      1 Template:CodeDownload
+ 18.87%    1.520      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194743 and revision id 1737932. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194751 and revision id 1737934. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
