--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -127,9 +127,9 @@ Macro Cut Object for Magnets
 </p>
 </div>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=CutObjectForMagnetsExample.png&amp;filetimestamp=20260106020408&amp;.html" class="mw-file-description"><img src="../File/CutObjectForMagnetsExample.png" decoding="async" width="400" height="400" class="mw-file-element" data-file-width="1658" data-file-height="1656"></a><figcaption></figcaption></figure>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="How_It_Works">How It Works</span></h2>
-</div>
+<p><span id="How_It_Works"></span>
+</p>
+<h2><span class="mw-headline" id="Wie_es_funktioniert">Wie es funktioniert</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Cutting Process:</b>
 </p>
@@ -262,12 +262,12 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194751
+Cached time: 20260113194758
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.046 seconds
-Real time usage: 0.079 seconds
+CPU time usage: 0.039 seconds
+Real time usage: 0.055 seconds
 Preprocessor visited node count: 164/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -278,13 +278,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.054      1 -total
- 52.50%    4.228      1 Template:Macro
- 23.39%    1.884      1 Template:CodeDownload
- 18.87%    1.520      3 Template:FileName
+100.00%    6.049      1 -total
+ 44.54%    2.694      1 Template:Macro
+ 29.31%    1.773      1 Template:CodeDownload
+ 20.55%    1.243      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194751 and revision id 1737934. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194757 and revision id 1737936. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
