--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -203,9 +203,9 @@ Macro Cut Object for Magnets
 <td>0.5 mm
 </td></tr></tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-</div>
+<p><span id="Requirements"></span>
+</p>
+<h2><span class="mw-headline" id="Voraussetzungen">Voraussetzungen</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>FreeCAD 0.19 or later.</li>
 <li>An object with a solid shape (Part or PartDesign body).</li>
@@ -262,12 +262,12 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194808
+Cached time: 20260113194816
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.051 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 164/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
@@ -278,13 +278,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.587      1 -total
- 41.32%    3.135      1 Template:Macro
- 26.93%    2.043      1 Template:CodeDownload
- 24.91%    1.890      3 Template:FileName
+100.00%   16.089      1 -total
+ 46.49%    7.479      1 Template:Macro
+ 31.15%    5.012      3 Template:FileName
+ 20.34%    3.273      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194808 and revision id 1737938. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194815 and revision id 1737940. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
