--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -206,11 +206,9 @@ Macro Cut Object for Magnets
 <p><span id="Requirements"></span>
 </p>
 <h2><span class="mw-headline" id="Voraussetzungen">Voraussetzungen</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>FreeCAD 0.19 or later.</li>
-<li>An object with a solid shape (Part or PartDesign body).</li>
-<li>For model plane mode: a datum plane or object with planar faces.</li></ul>
-</div>
+<ul><li>FreeCAD 0.19 oder h&ouml;her.</li>
+<li>Ein Objekt mit einer Festk&ouml;rper-Form (Part-Objekt oder PartDesign-K&ouml;rper).</li>
+<li>F&uuml;r den Modellebenenmodus: eine Bezugsebene oder ein Objekt mit ebenen Fl&auml;chen.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
@@ -262,13 +260,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194816
+Cached time: 20260113194921
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.042 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 164/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 163/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -278,13 +276,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.089      1 -total
- 46.49%    7.479      1 Template:Macro
- 31.15%    5.012      3 Template:FileName
- 20.34%    3.273      1 Template:CodeDownload
+100.00%    5.994      1 -total
+ 48.90%    2.931      1 Template:Macro
+ 27.89%    1.672      1 Template:CodeDownload
+ 18.80%    1.127      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194815 and revision id 1737940. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194921 and revision id 1737942. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
