--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -75,10 +75,8 @@ Macro Cut Object for Magnets
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro cuts a 3D object along a specified plane and automatically adds aligned magnet holes to both resulting pieces. The holes are positioned with intelligent collision detection to ensure they don't break through the outer walls of the object.
+<p>Dieses Makro schneidet ein 3D-Objekt entlang einer bestimmten Ebene und f&uuml;gt automatisch ausgerichtete Magnetl&ouml;cher zu beiden resultierenden Teilen hinzu. Die L&ouml;cher werden mit intelligenter Kollisionserkennung positioniert, um sicherzustellen, dass sie nicht durch die Au&szlig;enw&auml;nde des Objekts brechen.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This is particularly useful for:
 </p>
@@ -260,13 +258,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194921
+Cached time: 20260113194952
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.047 seconds
-Preprocessor visited node count: 163/1000000
+CPU time usage: 0.047 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 162/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -276,13 +274,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.994      1 -total
- 48.90%    2.931      1 Template:Macro
- 27.89%    1.672      1 Template:CodeDownload
- 18.80%    1.127      3 Template:FileName
+100.00%   13.620      1 -total
+ 41.81%    5.695      1 Template:Macro
+ 26.55%    3.616      3 Template:FileName
+ 24.74%    3.369      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194921 and revision id 1737942. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194952 and revision id 1737944. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
