--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -76,14 +76,11 @@ Macro Cut Object for Magnets
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Dieses Makro schneidet ein 3D-Objekt entlang einer bestimmten Ebene und f&uuml;gt automatisch ausgerichtete Magnetl&ouml;cher zu beiden resultierenden Teilen hinzu. Die L&ouml;cher werden mit intelligenter Kollisionserkennung positioniert, um sicherzustellen, dass sie nicht durch die Au&szlig;enw&auml;nde des Objekts brechen.
+</p><p>Dies ist besonders n&uuml;tzlich f&uuml;r:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This is particularly useful for:
-</p>
-<ul><li>Creating multi-part prints that snap together with embedded magnets.</li>
-<li>Splitting large objects for smaller 3D printer beds while maintaining alignment.</li>
-<li>Adding magnetic closure mechanisms to enclosures and cases.</li></ul>
-</div>
+<ul><li>Die Erstellung mehrteiliger Drucke, die mit eingebetteten Magneten zusammengef&uuml;gt werden.</li>
+<li>Die Aufteilung gro&szlig;er Objekte f&uuml;r kleinere 3D-Druckerbett, wobei die Ausrichtung beibehalten wird.</li>
+<li>Das Hinzuf&uuml;gen magnetischer Verschlussmechanismen zu Geh&auml;usen und H&uuml;llen.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><b>Key Features:</b>
 </p>
@@ -258,13 +255,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113194952
+Cached time: 20260113195011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.069 seconds
-Preprocessor visited node count: 162/1000000
+CPU time usage: 0.045 seconds
+Real time usage: 0.059 seconds
+Preprocessor visited node count: 161/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -274,13 +271,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.620      1 -total
- 41.81%    5.695      1 Template:Macro
- 26.55%    3.616      3 Template:FileName
- 24.74%    3.369      1 Template:CodeDownload
+100.00%    8.977      1 -total
+ 39.61%    3.556      1 Template:Macro
+ 33.12%    2.973      1 Template:CodeDownload
+ 22.17%    1.990      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113194952 and revision id 1737944. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195011 and revision id 1737946. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
