--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -226,11 +226,9 @@ Macro Cut Object for Magnets
 <p><span id="Source_Code"></span>
 </p>
 <h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The full source code is hosted on GitHub:
+<p>Der vollst&auml;ndige Quellcode wird auf GitHub gehostet:
 </p>
-<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro on GitHub</a></li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more/blob/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro auf GitHub</a></li></ul>
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
@@ -255,13 +253,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195011
+Cached time: 20260113195040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.045 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 161/1000000
+CPU time usage: 0.036 seconds
+Real time usage: 0.046 seconds
+Preprocessor visited node count: 160/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -271,13 +269,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.977      1 -total
- 39.61%    3.556      1 Template:Macro
- 33.12%    2.973      1 Template:CodeDownload
- 22.17%    1.990      3 Template:FileName
+100.00%    6.201      1 -total
+ 54.22%    3.362      1 Template:Macro
+ 21.14%    1.311      3 Template:FileName
+ 19.46%    1.207      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195011 and revision id 1737946. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195040 and revision id 1737948. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
