Created page with "Dieses Bild zeigt ein Vasenobjekt in seiner ursprünglichen Form und nachdem es mehrfach mit dem Makro geschnitten wurde. Anschließend können Magnete in das Objekt eingesetzt und das Objekt wieder zusammengesetzt werden. In diesem Beispiel wurde eine „zerbrechliche“ Vase für eine Theateraufführung hergestellt, aber es gibt auch viele andere Verwendungsmöglichkeiten."

--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -117,10 +117,8 @@ Macro Cut Object for Magnets
 <p><span id="Example"></span>
 </p>
 <h2><span class="mw-headline" id="Beispiel">Beispiel</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This image shows a vase object in its original form, and after being cut multiple times with the macro. Magnets can then be inserted to object, and the object can be re-assembled. This example was to create a "breakable" vase for a theatrical stage performance, but there are many other potential uses as well.
+<p>Dieses Bild zeigt ein Vasenobjekt in seiner urspr&uuml;nglichen Form und nachdem es mehrfach mit dem Makro geschnitten wurde. Anschlie&szlig;end k&ouml;nnen Magnete in das Objekt eingesetzt und das Objekt wieder zusammengesetzt werden. In diesem Beispiel wurde eine &bdquo;zerbrechliche&ldquo; Vase f&uuml;r eine Theaterauff&uuml;hrung hergestellt, aber es gibt auch viele andere Verwendungsm&ouml;glichkeiten.
 </p>
-</div>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=CutObjectForMagnetsExample.png&amp;filetimestamp=20260106020408&amp;.html" class="mw-file-description"><img src="../File/CutObjectForMagnetsExample.png" decoding="async" width="400" height="400" class="mw-file-element" data-file-width="1658" data-file-height="1656"></a><figcaption></figcaption></figure>
 <p><span id="How_It_Works"></span>
 </p>
@@ -253,13 +251,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195040
+Cached time: 20260113195122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.046 seconds
-Preprocessor visited node count: 160/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 159/1000000
 Post&#8208;expand include size: 3364/2097152 bytes
 Template argument size: 1252/2097152 bytes
 Highest expansion depth: 5/100
@@ -269,13 +267,13 @@ Unstrip post&#8208;expand size: 891/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.201      1 -total
- 54.22%    3.362      1 Template:Macro
- 21.14%    1.311      3 Template:FileName
- 19.46%    1.207      1 Template:CodeDownload
+100.00%    8.723      1 -total
+ 41.39%    3.611      1 Template:Macro
+ 35.47%    3.094      1 Template:CodeDownload
+ 18.98%    1.656      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195040 and revision id 1737948. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260113195122 and revision id 1737950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
