--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -72,9 +72,9 @@ Macro Multi Export
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro provides a convenient way to export selected FreeCAD objects to multiple file formats at once. Instead of exporting to each format individually, you can select all desired formats in a single dialog and export them simultaneously.
 </p>
@@ -172,12 +172,12 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195213
+Cached time: 20260113195219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.102 seconds
+CPU time usage: 0.030 seconds
+Real time usage: 0.038 seconds
 Preprocessor visited node count: 144/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
@@ -188,13 +188,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.299      1 -total
- 51.43%    4.783      1 Template:Macro
- 22.59%    2.101      3 Template:FileName
- 22.08%    2.053      1 Template:CodeDownload
+100.00%    5.977      1 -total
+ 35.30%    2.110      1 Template:Macro
+ 33.21%    1.985      1 Template:CodeDownload
+ 26.67%    1.594      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195212 and revision id 1737952. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195219 and revision id 1737954. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
