--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -100,9 +100,9 @@ Macro Multi Export
 <li>Quick select buttons: "Select All", "Select None", "Reset Defaults".</li>
 <li>Default formats: STL, STEP, and 3MF are pre-selected.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Select one or more objects in the 3D view that you want to export.</li>
 <li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b>.</li>
@@ -170,12 +170,12 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195245
+Cached time: 20260113195254
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.038 seconds
+CPU time usage: 0.027 seconds
+Real time usage: 0.051 seconds
 Preprocessor visited node count: 143/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
@@ -186,13 +186,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.342      1 -total
- 40.45%    2.161      1 Template:CodeDownload
- 34.39%    1.837      1 Template:Macro
- 20.39%    1.089      3 Template:FileName
+100.00%    9.936      1 -total
+ 43.05%    4.278      1 Template:Macro
+ 26.83%    2.666      3 Template:FileName
+ 26.55%    2.638      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195245 and revision id 1737956. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195253 and revision id 1737958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
