--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -118,13 +118,9 @@ Macro Multi Export
 <p><span id="Requirements"></span>
 </p>
 <h2><span class="mw-headline" id="Voraussetzungen">Voraussetzungen</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>FreeCAD 0.21 or later.</li>
-<li>Objects with solid shapes (Part or PartDesign bodies).</li></ul>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
+<ul><li>FreeCAD 0.21 oder h&ouml;her.</li>
+<li>Objekte mit Festk&ouml;rpern (Part oder PartDesign-K&ouml;rper).</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
 <li>Copy the file to your FreeCAD macro directory:
@@ -170,13 +166,13 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195300
+Cached time: 20260113195333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 143/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.073 seconds
+Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
@@ -186,13 +182,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.429      1 -total
- 40.54%    4.633      1 Template:Macro
- 30.77%    3.517      3 Template:FileName
- 24.68%    2.821      1 Template:CodeDownload
+100.00%   15.915      1 -total
+ 38.45%    6.120      1 Template:Macro
+ 38.07%    6.059      3 Template:FileName
+ 20.99%    3.340      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195300 and revision id 1737960. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195333 and revision id 1737964. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
