--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -129,9 +129,9 @@ Macro Multi Export
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
 <li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
-</div>
+<p><span id="Source_Code"></span>
+</p>
+<h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The full source code is hosted on GitHub:
 </p>
@@ -166,12 +166,12 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195333
+Cached time: 20260113195336
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.073 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.095 seconds
 Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
@@ -182,13 +182,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.915      1 -total
- 38.45%    6.120      1 Template:Macro
- 38.07%    6.059      3 Template:FileName
- 20.99%    3.340      1 Template:CodeDownload
+100.00%   18.127      1 -total
+ 40.38%    7.319      1 Template:Macro
+ 24.68%    4.474      1 Template:CodeDownload
+ 16.49%    2.990      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195333 and revision id 1737964. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195336 and revision id 1737966. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
