--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -154,10 +154,9 @@ Macro Multi Export
 </div>
 </div>
 <p><br>
+<span id="Links"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
+<h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
 <li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
@@ -166,12 +165,12 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195340
+Cached time: 20260113195345
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.053 seconds
+CPU time usage: 0.028 seconds
+Real time usage: 0.039 seconds
 Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
@@ -182,13 +181,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.479      1 -total
- 40.89%    3.467      1 Template:Macro
- 33.30%    2.824      3 Template:FileName
- 22.71%    1.926      1 Template:CodeDownload
+100.00%    7.575      1 -total
+ 43.65%    3.306      1 Template:Macro
+ 29.28%    2.218      1 Template:CodeDownload
+ 23.95%    1.814      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195340 and revision id 1737968. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195345 and revision id 1737970. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
