Created page with "Werkzeugleisten-Symbol [[Image:Macro_Multi_Export.png]]"

--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -140,11 +140,8 @@ Macro Multi Export
 <p><span id="Script"></span>
 </p>
 <h2><span class="mw-headline" id="Skript">Skript</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Multi_Export.FCMacro</b>
+<p>Werkzeugleisten-Symbol <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export.png&amp;filetimestamp=20260106011316&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Multi_Export.FCMacro</b>
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
 <div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
@@ -165,13 +162,13 @@ Macro Multi Export
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113195345
+Cached time: 20260113195406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.028 seconds
-Real time usage: 0.039 seconds
-Preprocessor visited node count: 141/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.038 seconds
+Preprocessor visited node count: 140/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
@@ -181,13 +178,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.575      1 -total
- 43.65%    3.306      1 Template:Macro
- 29.28%    2.218      1 Template:CodeDownload
- 23.95%    1.814      3 Template:FileName
+100.00%    4.639      1 -total
+ 40.11%    1.861      1 Template:Macro
+ 32.01%    1.485      1 Template:CodeDownload
+ 22.49%    1.043      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195345 and revision id 1737970. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195406 and revision id 1737972. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
