--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -154,21 +154,19 @@ Macro Multi Export
 <span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Complete guides and tutorials.</li>
-<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Source code and issue tracker.</li>
-<li><a href="../Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
-<li><a href="../Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats.</li></ul>
-</div>
+<ul><li><a rel="nofollow" class="external text" href="https://spkane.github.io/freecad-robust-mcp-and-more/">Full Documentation</a> - Vollst&auml;ndige Anleitungen und Tutorials.</li>
+<li><a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">GitHub Repository</a> - Quellcode und Problemverfolgung (Issue Tracker).</li>
+<li><a href="../de/Std_Export.html" title="Std Export/de">Std Export</a> - Die integrierte Exportfunktion von FreeCAD.</li>
+<li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113195406
+Cached time: 20260113195517
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.038 seconds
-Preprocessor visited node count: 140/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 139/1000000
 Post&#8208;expand include size: 3189/2097152 bytes
 Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
@@ -178,13 +176,13 @@ Unstrip post&#8208;expand size: 841/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.639      1 -total
- 40.11%    1.861      1 Template:Macro
- 32.01%    1.485      1 Template:CodeDownload
- 22.49%    1.043      3 Template:FileName
+100.00%    7.688      1 -total
+ 50.01%    3.845      1 Template:Macro
+ 27.02%    2.077      1 Template:CodeDownload
+ 18.26%    1.404      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195406 and revision id 1737972. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260113195516 and revision id 1737974. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
