Updated page Macros recipes/de

--- a/wiki/de/Macros_recipes.html
+++ b/wiki/de/Macros_recipes.html
@@ -146,7 +146,7 @@
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfoToolBar.png&amp;filetimestamp=20220217104352&amp;.html" class="mw-file-description"><img src="../File/FCInfoToolBar.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfo_ToolBar.html" title="Macro FCInfo ToolBar/de">FCInfo Werkzeugleiste</a></span>: Zeigt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form als FCInfo in einer Mini-Symbolleiste an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FCInfoGlass.png&amp;filetimestamp=20150731105401&amp;.html" class="mw-file-description"><img src="../File/Macro_FCInfoGlass.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span> <a href="../de/Macro_FCInfoGlass.html" title="Macro FCInfoGlass/de">Makro FC Gl&auml;serne Information</a></span>: Gibt eine Reihe von Informationen &uuml;ber die ausgew&auml;hlte Form und zeigt diese in 3D auf dem Bildschirm an.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=FCInfoToMouse.png&amp;filetimestamp=20160101205625&amp;.html" class="mw-file-description"><img src="../File/FCInfoToMouse.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCInfoToMouse.html" title="Macro FCInfoToMouse/de">Makro FCInfo an Maus</a></span>: Liefert in Echtzeit Informationen zu Koordinaten, L&auml;ngen und Winkeln auf der Maus in einer Blasenbeschriftung, die auf dem 3D-Bildschirm angezeigt wird.</li></ul>
-<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FCTreeView.png&amp;filetimestamp=20170908201721&amp;.html" class="mw-file-description"><img src="../File/Macro_FCTreeView.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCTreeView.html" title="Macro FCTreeView/de">Macro FC Baumansicht</a></span>: Makro zum Auflisten aller Objekte im Projekt in einer Liste ohne Hierarchie, Optionen zum Sortieren nach Name, Bezeichnung, Sichtbarkeit, Gruppe, nach L&auml;nge, Option zum Suchen nach Name, Bezeichnung ... ohne Gro&szlig;-/Kleinschreibung oder mit Gro&szlig;-/Kleinschreibung und Auswahl aller im Makrofenster angezeigten Objekte.</li></ul>
+<ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_FCTreeView.png&amp;filetimestamp=20170908201721&amp;.html" class="mw-file-description"><img src="../File/Macro_FCTreeView.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_FCTreeView.html" title="Macro FCTreeView/de">Makro FC Baumansicht</a></span>: Makro zum Auflisten aller Objekte im Projekt in einer Liste ohne Hierarchie, Optionen zum Sortieren nach Name, Bezeichnung, Sichtbarkeit, Gruppe, nach L&auml;nge, Option zum Suchen nach Name, Bezeichnung ... ohne Gro&szlig;-/Kleinschreibung oder mit Gro&szlig;-/Kleinschreibung und Auswahl aller im Makrofenster angezeigten Objekte.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_HighlightCommon.png&amp;filetimestamp=20190712171621&amp;.html" class="mw-file-description"><img src="../File/Macro_HighlightCommon.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Macro_HighlightCommon.html" title="Macro HighlightCommon">Makro Vereinigung Hervorheben</a></span>: Hebt gemeinsame Teile hervor.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=HighlightDifference.png&amp;filetimestamp=20150924122301&amp;.html" class="mw-file-description"><img src="../File/HighlightDifference.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="16" data-file-height="16"></a></span> <a href="../de/Macro_HighlightDifference.html" title="Macro HighlightDifference/de">Makro Unterschied Hervorheben</a></span>: Berechne die Differenz zwischen zwei Formen.</li></ul>
 <ul><li><span class="MacroLink"><span typeof="mw:File"><a href="../index.php?title=Macro_MeasureCircle.png&amp;filetimestamp=20160408193149&amp;.html" class="mw-file-description"><img src="../File/Macro_MeasureCircle.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Macro_MeasureCircle.html" title="Macro MeasureCircle/de">Makro Kreis messen</a></span>: Berechnen Sie den Radius eines Kreises anhand von drei Punkten oder einer Kreislinie.</li></ul>
@@ -416,12 +416,12 @@
 <li>Unter dem Men&uuml;reiter <b>Symbolleisten</b> eine neue Symbolleiste erstellen und das Makro aus der Kategorie <b>Makros</b> hinzuf&uuml;gen.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260113200212
+Cached time: 20260113200229
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.512 seconds
-Real time usage: 0.636 seconds
+CPU time usage: 0.464 seconds
+Real time usage: 0.561 seconds
 Preprocessor visited node count: 2862/1000000
 Post&#8208;expand include size: 28787/2097152 bytes
 Template argument size: 16107/2097152 bytes
@@ -432,15 +432,15 @@ Unstrip post&#8208;expand size: 1955/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.385      1 -total
- 40.99%   12.865    219 Template:MacroLink
-  7.45%    2.337      6 Template:MenuCommand
-  7.23%    2.270      1 Template:Version/de
-  5.45%    1.710      1 Template:TOCright
-  3.38%    1.062      3 Template:Button
+100.00%   45.632      1 -total
+ 32.48%   14.819    219 Template:MacroLink
+ 23.66%   10.795      1 Template:Version/de
+  7.21%    3.292      6 Template:MenuCommand
+  4.18%    1.906      3 Template:Button
+  3.61%    1.649      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200211 and revision id 1737994. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19710-0!canonical and timestamp 20260113200228 and revision id 1737996. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
