--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -53,9 +53,9 @@
 <li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Mod/FreecadRobustMCPBridge/</span></li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="GUI_Mode">GUI Mode</span></h3>
 </div>
@@ -243,12 +243,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200522
+Cached time: 20260113200527
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.050 seconds
+CPU time usage: 0.052 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 246/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -259,16 +259,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.866      1 -total
- 20.55%    2.233      4 Template:Code
- 19.00%    2.064      3 Template:FileName
- 15.35%    1.668      3 Template:Button
- 13.29%    1.444      5 Template:Incode
- 11.50%    1.250      1 Template:TOCright
- 10.49%    1.140      4 Template:MenuCommand
+100.00%   31.313      1 -total
+ 34.34%   10.753      4 Template:Code
+ 20.54%    6.430      3 Template:FileName
+ 10.53%    3.296      3 Template:Button
+ 10.33%    3.234      5 Template:Incode
+  6.60%    2.068      4 Template:MenuCommand
+  5.75%    1.801      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200522 and revision id 1738014. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200527 and revision id 1738016. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
