Created page with "===Über den Addon-Manager (Empfohlen)==="

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -29,9 +29,9 @@
 <li>Configurable auto-start on FreeCAD launch.</li></ul>
 </div>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span id="Via_Addon_Manager_.28Recommended.29"></span><span class="mw-headline" id="Via_Addon_Manager_(Recommended)">Via Addon Manager (Recommended)</span></h3>
-</div>
+<p><span id="Via_Addon_Manager_(Recommended)"></span>
+</p>
+<h3><span id=".C3.9Cber_den_Addon-Manager_.28Empfohlen.29"></span><span class="mw-headline" id="&Uuml;ber_den_Addon-Manager_(Empfohlen)">&Uuml;ber den Addon-Manager (Empfohlen)</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Open FreeCAD</li>
 <li>Go to <b>Tools &rarr; Addon Manager</b></li>
@@ -239,12 +239,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200656
+Cached time: 20260113200718
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.041 seconds
-Real time usage: 0.054 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.062 seconds
 Preprocessor visited node count: 244/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -255,16 +255,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.594      1 -total
- 20.23%    2.750      5 Template:Incode
- 20.00%    2.719      4 Template:Code
- 16.17%    2.198      4 Template:MenuCommand
- 13.91%    1.892      3 Template:Button
- 11.50%    1.563      1 Template:TOCright
- 10.28%    1.398      3 Template:FileName
+100.00%   10.025      1 -total
+ 22.03%    2.209      4 Template:Code
+ 20.58%    2.063      4 Template:MenuCommand
+ 11.87%    1.190      3 Template:FileName
+ 11.85%    1.188      1 Template:TOCright
+ 11.78%    1.181      5 Template:Incode
+ 11.29%    1.132      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200656 and revision id 1738024. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200718 and revision id 1738026. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
