Created page with "[[Image:Addon_RobustMCPBridge_toolbar.png|Symbolleiste des Arbeitsbereichs Robust MCP Bridge]]"

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -51,10 +51,8 @@
 <p><span id="GUI_Mode"></span>
 </p>
 <h3><span id="Grafischer_Benutzeroberfl.C3.A4chenmodus"></span><span class="mw-headline" id="Grafischer_Benutzeroberfl&auml;chenmodus">Grafischer Benutzeroberfl&auml;chenmodus</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench toolbar"><img alt="Robust MCP Bridge workbench toolbar" src="../File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
+<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_toolbar.png&amp;filetimestamp=20260111060550&amp;.html" class="mw-file-description" title="Symbolleiste des Arbeitsbereichs Robust MCP Bridge"><img alt="Symbolleiste des Arbeitsbereichs Robust MCP Bridge" src="../File/Addon_RobustMCPBridge_toolbar.png" decoding="async" width="294" height="102" class="mw-file-element" data-file-width="294" data-file-height="102"></a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Switch to the <b>Robust MCP Bridge</b> workbench using the workbench selector</li>
 <li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Start Bridge</span> in the toolbar</li>
@@ -235,13 +233,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113200924
+Cached time: 20260113201027
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 243/1000000
+CPU time usage: 0.049 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 242/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
 Highest expansion depth: 4/100
@@ -251,16 +249,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.017      1 -total
- 20.04%    2.809      1 Template:TOCright
- 19.88%    2.787      4 Template:Code
- 15.34%    2.151      3 Template:Button
- 12.20%    1.710      4 Template:MenuCommand
- 10.52%    1.475      3 Template:FileName
- 10.08%    1.413      5 Template:Incode
+100.00%   11.962      1 -total
+ 23.28%    2.785      4 Template:Code
+ 14.87%    1.779      3 Template:FileName
+ 14.19%    1.697      1 Template:TOCright
+ 12.84%    1.536      5 Template:Incode
+ 12.01%    1.437      4 Template:MenuCommand
+ 11.35%    1.358      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113200924 and revision id 1738033. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201027 and revision id 1738035. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
