Created page with "==Funktionen nach Modus=="

--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -126,9 +126,9 @@
 <p><span typeof="mw:File"><a href="../index.php?title=Addon_RobustMCPBridge_preferences.png&amp;filetimestamp=20260111061341&amp;.html" class="mw-file-description" title="Robust MCP Bridge workbench preference pane"><img alt="Robust MCP Bridge workbench preference pane" src="../File/Addon_RobustMCPBridge_preferences.png" decoding="async" width="800" height="598" class="mw-file-element" data-file-width="1790" data-file-height="1338"></a></span>
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Features_by_Mode">Features by Mode</span></h2>
-</div>
+<p><span id="Features_by_Mode"></span>
+</p>
+<h2><span class="mw-headline" id="Funktionen_nach_Modus">Funktionen nach Modus</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="wikitable">
 <tbody><tr>
@@ -233,12 +233,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113201027
+Cached time: 20260113201106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.070 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.078 seconds
 Preprocessor visited node count: 242/1000000
 Post&#8208;expand include size: 2245/2097152 bytes
 Template argument size: 748/2097152 bytes
@@ -249,16 +249,16 @@ Unstrip post&#8208;expand size: 3285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.962      1 -total
- 23.28%    2.785      4 Template:Code
- 14.87%    1.779      3 Template:FileName
- 14.19%    1.697      1 Template:TOCright
- 12.84%    1.536      5 Template:Incode
- 12.01%    1.437      4 Template:MenuCommand
- 11.35%    1.358      3 Template:Button
+100.00%   19.879      1 -total
+ 19.43%    3.863      4 Template:Code
+ 18.00%    3.578      1 Template:TOCright
+ 14.99%    2.979      5 Template:Incode
+ 13.94%    2.771      3 Template:FileName
+ 13.28%    2.640      4 Template:MenuCommand
+ 10.30%    2.047      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201027 and revision id 1738035. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260113201106 and revision id 1738037. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
